fixed bwoken spacing that looked fine bc i had devtools open ugh

--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ div#upgrades {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-top: 25%;
+  padding-top: 5%;
 }
 div#upgradesbox {
   padding-top: 2%;
